# alm_integration

./: .dockerignore  .env.docker.example  .env.example  .gitignore  AGENTS.md  Makefile  README.md  auth.json  docker-compose.yml  pyproject.toml
backend/: Cargo.toml
backend/migrations/: 20260407032000_create_integration_runtime_tables.down.sql  20260407032000_create_integration_runtime_tables.up.sql  20260407103000_extend_integration_run_for_sync_api.down.sql  20260407103000_extend_integration_run_for_sync_api.up.sql  20260407120000_create_integration_connection_tables.down.sql  20260407120000_create_integration_connection_tables.up.sql  20260407234000_add_normalized_record_reference.down.sql  20260407234000_add_normalized_record_reference.up.sql  20260408001000_add_identity_mapping.down.sql  20260408001000_add_identity_mapping.up.sql  20260408013000_add_domain_core_tables.down.sql  20260408013000_add_domain_core_tables.up.sql  20260408094000_add_work_item_status_history.down.sql  20260408094000_add_work_item_status_history.up.sql  20260408101000_add_work_item_hierarchy.down.sql  20260408101000_add_work_item_hierarchy.up.sql  20260408104000_add_iteration_and_work_item_plan_link.down.sql  20260408104000_add_iteration_and_work_item_plan_link.up.sql  20260408113000_add_organization_and_workforce_master.down.sql  20260408113000_add_organization_and_workforce_master.up.sql  20260408133000_add_domain_master_reference_columns.down.sql  20260408133000_add_domain_master_reference_columns.up.sql  20260408152000_add_master_data_change_log.down.sql  README.md  (+2 more)
backend/src/: config.rs  (+3 more)
(+172 files in other folders)
